knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Group__c/pqcrush__Relationship_Group__c.object-meta.xml
<CustomObject>
    <label>Relationship Group</label>
    <nameField>
        <label>Relationship Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>