knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Group__c/fields/pqcrush__Parent_Relationship_Group__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Parent_Relationship_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Relationship Group</label>
    <referenceTo>pqcrush__Relationship_Group__c</referenceTo>
    <relationshipLabel>Relationship Groups</relationshipLabel>
    <relationshipName>Relationship_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>